# dnd-mapper

./: .gitignore  TODO  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: dungeon-wide.json  dungeon.json  dungeon_test.json  dungeon_test2.json  unpacked.json
src/components/: AddEntityForm.tsx  DSFileSelector.tsx  DSNode.tsx  Dialog.tsx  ImageSelect.tsx
src/components/controls/: AddEntityDialog.tsx  AddEntityForm.tsx
src/components/dialog/: ActionListDialog.tsx  AdditionEntityDialog.tsx  EntityControlDialog.tsx  LayerSelectDialog.tsx  SelectDialog.tsx  StageGroupDialog.tsx  StageSelectionDialog.tsx  instanceEditorDialog.tsx
src/components/editor/: DungeonAssetNodeDisplay.tsx  EditorContext.tsx  EntityList.tsx  EntityNode.tsx  StageForm.tsx  StageGroupSelect.tsx  StageList.tsx  TriggersListDialog.tsx
src/components/game/: HideableHeader.tsx
src/components/ui/: combobox.tsx  popover.tsx  select.tsx
src/hooks/: use-toast.ts
src/lib/: consts.ts  db.ts  loader.ts  logger.ts  types.ts  window.ts
src/lib/display/: entity.ts  renderer.ts  utils.ts
src/lib/renderer/: DSRenderer.ts  DungeonScrawl.ts  TitleRenderer.ts  actions.ts
src/routes/: __root.tsx  control.$id.tsx  control.tsx  display-editor.tsx  display.tsx  entity-editor.tsx  index.tsx  stage-editor.tsx
(+8 files in other folders)
